add new more articles in single article blog

--- a/app/views/blog/post.html
+++ b/app/views/blog/post.html
@@ -73,41 +73,35 @@
         </div>
     </div>
 
-<div class="grid-container reviews-container  hide " style="display: block;">
-      <div class="grid-100">
-        <div class="reviews">
-          <p class="title" style="margin-top: 30px;">Comentarios &nbsp;&nbsp;<span>1</span></p>
-          <div class="u-separator"></div>
-          <div class="reviews-items-container">
-          <div class="review">
-    <div class="avatar"><img src="http://res.cloudinary.com/hackdudes/image/upload/w_150,h_150,c_thumb,d_am_avatar.jpg/v1449600217/wuduga4vwpjtfoxcsnib.jpg"></div>
-    <div class="content">
-      <div class="info">
-        <p class="name">
-
-            Julio Cesar Canares Garcia
-
-        </p>&nbsp;&nbsp;&nbsp;
-        <p class="date"><i class="bi_interface-clock"></i> a month ago</p>
-      </div>
-      <p class="text">Pajasa :D</p>
-    </div>
-  </div></div>
-
-
-            <div class="review">
-              <div class="avatar"><img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_150,h_150,q_70/am_avatar.jpg"></div>
-              <form class="content review-form">
-                <input type="hidden" name="idWork" value="20654">
-                <textarea class="value-input" name="value"></textarea>
-                <button>AGREGAR REVIEW</button>
-              </form>
+    <div class="grid-container reviews-container  hide " style="display: block;">
+        <div class="grid-100">
+            <div class="reviews">
+                <p class="title" style="margin-top: 30px;">Comentarios &nbsp;&nbsp;<span>1</span></p>
+                <div class="u-separator"></div>
+                <div class="reviews-items-container">
+                    <div class="review">
+                        <div class="avatar"><img src="http://res.cloudinary.com/hackdudes/image/upload/w_150,h_150,c_thumb,d_am_avatar.jpg/v1449600217/wuduga4vwpjtfoxcsnib.jpg"></div>
+                        <div class="content">
+                            <div class="info">
+                                <p class="name">Julio Cesar Canares Garcia</p>&nbsp;&nbsp;&nbsp;
+                                <p class="date"><i class="bi_interface-clock"></i> a month ago</p>
+                            </div>
+                            <p class="text">Pajasa :D</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="review">
+                    <div class="avatar"><img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_150,h_150,q_70/am_avatar.jpg"></div>
+                    <form class="content review-form">
+                        <input type="hidden" name="idWork" value="20654">
+                        <textarea class="value-input" name="value"></textarea>
+                        <button>AGREGAR REVIEW</button>
+                    </form>
+                </div>
             </div>
-
         </div>
-      </div>
     </div>
-
+<!--
     <div class="blog-single-popular">
         <div class="grid-container">
             <div class="grid-100">
@@ -116,7 +110,93 @@
                 </div>
             </div>
         </div>
+    </div> -->
+
+
+<div class="blog-single-popular">
+  <div class="grid-container">
+    <div class="grid-100 grid-parent">
+      <p class="title">Artículos populares</p>
+
+      <div class="blog-articles-container">
+
+        <div class="blog-article-container">
+          <article class="blog-article">
+            <header class="header" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/v1450852734/general/blog-cover-1.png')">
+              <span class="tag">NATURE</span>
+              <div class="inner">
+                <p class="title">Offbeat Portraits Give Stars a New Turn</p>
+                <div class="stats u-margin-top-15">
+                  <p><i class="fa fa-heart"></i>&nbsp;&nbsp;54</p>
+                  <p><i class="fa fa-heart"></i>&nbsp;&nbsp;12</p>
+                </div>
+              </div>
+            </header>
+            <p class="content">I whipped the Scotch tape from my pocket and said y ahora lo que hay que hacer es que todo tenga coherencia para que se puedan ver las cosas bajo el modelo de lo que es medium</p>
+            <footer class="footer">
+              <p class="date"><i class="bi_interface-clock"></i> June 11, 2014</p>
+              <span class="author">
+                <p>Por&nbsp;&nbsp;</p>
+                <img src="http://res.cloudinary.com/hackdudes/image/upload/w_150,h_150,c_thumb,d_am_avatar.jpg/v1448493683/qujhapblpptr30wjrj3l.jpg">
+                <p>&nbsp;ARTE MANIFIESTO</p>
+              </span>
+            </footer>
+          </article>
+        </div>
+
+        <div class="blog-article-container">
+          <article class="blog-article">
+            <header class="header" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/v1450852734/general/blog-cover-1.png')">
+              <span class="tag">NATURE</span>
+              <div class="inner">
+                <p class="title">Offbeat Portraits Give Stars a New Turn</p>
+                <div class="stats u-margin-top-15">
+                  <p><i class="fa fa-heart"></i>&nbsp;&nbsp;54</p>
+                  <p><i class="fa fa-heart"></i>&nbsp;&nbsp;12</p>
+                </div>
+              </div>
+            </header>
+            <p class="content">I whipped the Scotch tape from my pocket and said y ahora lo que hay que hacer es que todo tenga coherencia para que se puedan ver las cosas bajo el modelo de lo que es medium</p>
+            <footer class="footer">
+              <p class="date"><i class="bi_interface-clock"></i> June 11, 2014</p>
+              <span class="author">
+                <p>Por&nbsp;&nbsp;</p>
+                <img src="http://res.cloudinary.com/hackdudes/image/upload/w_150,h_150,c_thumb,d_am_avatar.jpg/v1448493683/qujhapblpptr30wjrj3l.jpg">
+                <p>&nbsp;ARTE MANIFIESTO</p>
+              </span>
+            </footer>
+          </article>
+        </div>
+
+        <div class="blog-article-container">
+          <article class="blog-article">
+            <header class="header" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/v1450852734/general/blog-cover-1.png')">
+              <span class="tag">NATURE</span>
+              <div class="inner">
+                <p class="title">Offbeat Portraits Give Stars a New Turn</p>
+                <div class="stats u-margin-top-15">
+                  <p><i class="fa fa-heart"></i>&nbsp;&nbsp;54</p>
+                  <p><i class="fa fa-heart"></i>&nbsp;&nbsp;12</p>
+                </div>
+              </div>
+            </header>
+            <p class="content">I whipped the Scotch tape from my pocket and said y ahora lo que hay que hacer es que todo tenga coherencia para que se puedan ver las cosas bajo el modelo de lo que es medium</p>
+            <footer class="footer">
+              <p class="date"><i class="bi_interface-clock"></i> June 11, 2014</p>
+              <span class="author">
+                <p>Por&nbsp;&nbsp;</p>
+                <img src="http://res.cloudinary.com/hackdudes/image/upload/w_150,h_150,c_thumb,d_am_avatar.jpg/v1448493683/qujhapblpptr30wjrj3l.jpg">
+                <p>&nbsp;ARTE MANIFIESTO</p>
+              </span>
+            </footer>
+          </article>
+        </div>
+
+      </div>
     </div>
+  </div>
+</div>
+
 
 {% endblock %}
 
