--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -4018,6 +4018,7 @@ white = #fff
 	// border-radius 3px
 	overflow hidden
 	margin 10px
+	background white
 	.header
 		display flex
 		position relative
