--- a/app/views/partials/elements/post.html
+++ b/app/views/partials/elements/post.html
@@ -12,7 +12,7 @@
             </div>
           </div>
         </header>
-        {# <p class="content"><%= description %></p> #}
+        <p class="content"><%= description %></p>
         <footer class="footer">
           <p class="date"><i class="bi_interface-clock"></i><%=formatDate(createdAt)%></p>
           <span class="author">
