--- a/app/views/blog/post.html
+++ b/app/views/blog/post.html
@@ -76,7 +76,7 @@
     <div class="grid-container reviews-container  hide " style="display: block;">
         <div class="grid-100">
             <div class="reviews">
-                <p class="title" style="margin-top: 30px;">Comentarios &nbsp;&nbsp;<span>1</span></p>
+                <p class="title" style="margin-top: 30px;">Comentarios &nbsp;&nbsp;<span>{{post.reviews}}</span></p>
                 <div class="u-separator"></div>
                 <div class="reviews-items-container">
                     <div class="review">
@@ -120,7 +120,7 @@
 
       <div class="blog-articles-container">
 
-        <div class="blog-article-container">
+        <!-- <div class="blog-article-container">
           <article class="blog-article">
             <header class="header" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/v1450852734/general/blog-cover-1.png')">
               <span class="tag">NATURE</span>
@@ -190,7 +190,7 @@
               </span>
             </footer>
           </article>
-        </div>
+        </div> -->
 
       </div>
     </div>
@@ -220,7 +220,7 @@
             disableEditing: true
         });
 
-        var viewer = new APP.Viewer('postMinimal', $('.articles'), null, posts);
+        var viewer = new APP.Viewer('post', $('.blog-articles-container'), null, posts);
     });
 </script>
 
