--- a/app/views/pages/index.html
+++ b/app/views/pages/index.html
@@ -20,11 +20,13 @@
 							<p class="subtitle u-padding-top-10">James Gurney picks the most interesting pieces from the luxury watch fair</p>
 						</div>-->
 					</div>
+					<a href="https://kuestionario.typeform.com/to/VNsGbl">
 					<div class="slider-item js-slide" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/v1450065551/general/home-slider-2.jpg')">
 						<div class="slider-item-inner">
 							<p class="title">Participa y gana una exposicion en Casa Pausa</p>
 						</div>
 					</div>
+				</a>
 				</div>
 				<div class="slider-nav">
 					<i class="slider-nav-item js-slideNavItem active fa fa-circle"></i>
@@ -63,7 +65,7 @@
 					</a>
 				</div>
 				<div class="home-grid-column desktop">
-					<a href="#" class="home-grid-element">
+					<a href="https://kuestionario.typeform.com/to/VNsGbl" class="home-grid-element">
 						<div class="cover"></div>
 						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1450065550/general/home-gid-image-5.jpg">
 					</a>
