--- a/app/views/blog/creator.html
+++ b/app/views/blog/creator.html
@@ -1,35 +1,32 @@
 {% extends '../partials/base.html' %}
-{% set path = '' %}
 
 {% block styles %}
     <link rel="stylesheet" href="//cdn.jsdelivr.net/medium-editor/latest/css/medium-editor.min.css">
     <link rel="stylesheet" href="/default.css">
     <link rel="stylesheet" href="/medium-editor-insert-plugin.css">
-    <style>
-        .hide {
-            display: none;
-        }
-
-        .cloudinary-fileupload {
-            border: none;
-            cursor: pointer;
-            opacity: 0;
-            padding: 0;
-            position: absolute;
-            top: 0;
-        }
-    </style>
 {% endblock %}
 
 
 {% block elements %}
-    <h6>
+    <p>
         estado : <span class="status">Inicio</span>
-    </h6>
+    </p>
 
-    <!-- <button class="publish-btn">
-      publicar
-    </button> -->
+
+<div class="uploader-cover">
+  <div class="profile-imgage">
+    <div class="preview">
+    </div>
+  </div>
+  <div class="preload hide"><i class="fa fa-spinner"></i></div>
+  <button class="button upload u-margin-top-30">BUSCAR ARCHIVO</button>
+</div>
+
+<div class="image-uploader" style="position:relative;">
+  {{ cloudinary.uploader.image_upload_tag('photo', {callback: cloudinary_cors, return_delete_token: true, html: { style: "width:230px;height:55px;top:-70px;left: 105px;" } })}}
+</div>
+
+</br>
 
     <select class="input select" name='category'>
       <option disabled selected>Selecciona una Categoria</option>
@@ -39,12 +36,11 @@
     </select>
     </br>
 
-
-    <input type="text" name="name" placeholder="Titulo del post" value="{{post.name}}">
+    <input type="text" name="name" placeholder="Titulo del post">
 
     <div id="container">
         {{ cloudinary.uploader.image_upload_tag('photo', {callback: cloudinary_cors, return_delete_token: true, html: {
-        style: "width:230px;height:55px;top:-70px;left: 105px;", multiple:1 } })}}
+        style: "width:230px;height:55px;top:-70px;left: 105px;", multiple:1, class:'editor-photos' } })}}
 
         <div class="editable">
             {% if post %}
@@ -56,7 +52,6 @@
 
 
 {% block scripts %}
-
     <script src="/jquery-2.1.1.min.js"></script>
     <script src="http://linkesch.com/medium-editor-insert-plugin/bower_components/handlebars/handlebars.runtime.min.js"></script>
     <script src="http://linkesch.com/medium-editor-insert-plugin/bower_components/jquery-sortable/source/js/jquery-sortable-min.js"></script>
@@ -71,319 +66,10 @@
     <script src="/medium-editor-insert-plugin.js"></script>
 
     <script>
-      var post = {{post|json|safe}};
-      console.log(post);
-
-        $(function () {
-
-            if(post) {
-              $('select[name=category]').find('option[value=' + post.Category.id + ']').attr('selected', true);
-            }
-            $.cloudinary.config({{cloudinary.config()|json|safe}});
-
-            var editor = new MediumEditor('.editable', {
-                buttonLabels: 'fontawesome',
-                targetBlank: true,
-                imageDragging: false,
-                toolbar: {
-                    buttons: [
-                    'h2', 'h3', 'bold', 'italic', 'quote', 'anchor'
-                  ]
-                }
-            });
-            //
-            // $('.publish-btn').click(function() {
-            //   if(!post) return alert('Necesitas escribir algo =)');
-            //
-            //   var url = '/blog/post/update';
-            //   var payload = {published:true}
-            //   payload.idPost = post.id;
-            //   $.post(url, payload).then(function (response) {
-            //     alert('publicado');
-            //   });
-            // });
-
-            $('.editable').mediumInsert({
-                editor: editor,
-                addons: {
-                  embeds: false
-                }
-            });
-
-            var uploadingImage = false;
-
-            var $status = $('.status');
-
-            Broadcaster.addEventListener('imageProgressComplete', function () {
-                $status.text('Procesando imagenes....');
-                console.log('started');
-            });
-
-            Broadcaster.addEventListener('imageStarted', function () {
-                uploadingImage = true;
-                $status.text('Cargando imagenes....');
-                console.log('started');
-            });
-
-            Broadcaster.addEventListener('imageLoaded', function () {
-                uploadingImage = false;
-                triggerAutoSave(null, null);
-                $status.text('Imagenes cargadas');
-            });
-
-            var triggerAutoSave = function (event, editable) {
-                if (uploadingImage) return console.log('subiendo imagen');
-
-                var name = $('input[name=name]').val().trim();
-                if(name.length < 1) {
-                  return alert('Agrega un titulo');
-                }
-
-                var category = $('select[name=category]').val().trim();
-                if(category.length < 1)  return alert('Agregar categoria');
-
-
-                var b = editor.serialize()['element-0']['value'];
-                var $editable = $(editable);
-
-                var payload = {
-                  body: b,
-                  name: name,
-                  category: category,
-                  description: $editable.find('p').text().substr(0, 180),
-                  photo: $editable.find('img').attr('src')
-                };
-
-                $status.text('Guardando.....');
-                if (!post) {
-                    var url = '/blog/post/create';
-                    $.post(url, payload).then(function (response) {
-                        post = response.data.post;
-                        $status.text('✓ guardado');
-                    });
-                } else {
-                    var url = '/blog/post/update';
-                    payload.idPost = post.id;
-                    $.post(url, payload).then(function (response) {
-                        post = response.data.post;
-                        $status.text('✓ guardado');
-                    });
-                }
-            };
-
-            var throttledAutoSave = MediumEditor.util.throttle(triggerAutoSave, 1000);
-            editor.subscribe('editableInput', throttledAutoSave);
-
-            window.onbeforeunload = function(evt) {
-              if(uploadingImage) {
-                var message = 'Aun no se han guardado tus cambios!';
-                if (typeof evt == 'undefined') {
-                    evt = window.event;
-                }
-                if (evt) {
-                    evt.returnValue = message;
-                }
-
-                return message;
-              }
-
-    }
-        });
+      var post = null;
+      $(function () {
+          $.cloudinary.config({{cloudinary.config()|json|safe}});
+          new APP.CreatorPostScreen();
+      });
     </script>
-
 {% endblock %}
-
-
-<!-- <!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8">
-    <title>Creator</title>
-    <link rel="stylesheet" href="/demo.css">
-    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.css">
-    <link rel="stylesheet" href="//cdn.jsdelivr.net/medium-editor/latest/css/medium-editor.min.css">
-    <link rel="stylesheet" href="/default.css">
-    <link rel="stylesheet" href="/medium-editor-insert-plugin.css">
-    <style>
-        .hide {
-            display: none;
-        }
-
-        .cloudinary-fileupload {
-            border: none;
-            cursor: pointer;
-            opacity: 0;
-            padding: 0;
-            position: absolute;
-            top: 0;
-        }
-    </style>
-</head>
-<body>
-
-<h6>
-    estado : <span class="status">Inicio</span>
-</h6>
-
-<select class="input select" name='category'>
-  <option disabled selected>Selecciona una Categoria</option>
-  {% for category in categories %}
-    <option value="{{category.id}}">{{category.name}}</option>
-  {% endfor %}
-</select>
-</br>
-
-
-<input type="text" name="name" placeholder="Titulo del post" value="{{post.name}}">
-
-<div id="container">
-    {{ cloudinary.uploader.image_upload_tag('photo', {callback: cloudinary_cors, return_delete_token: true, html: {
-    style: "width:230px;height:55px;top:-70px;left: 105px;", multiple:1 } })}}
-
-    <div class="editable">
-        {% if post %}
-          {{postBody|safe}}
-        {% endif %}
-    </div>
-</div>
-
-<script src="/jquery-2.1.1.min.js"></script>
-<script src="http://linkesch.com/medium-editor-insert-plugin/bower_components/handlebars/handlebars.runtime.min.js"></script>
-<script src="http://linkesch.com/medium-editor-insert-plugin/bower_components/jquery-sortable/source/js/jquery-sortable-min.js"></script>
-
-<script src='/jquery.ui.widget.js'></script>
-<script src='/jquery.iframe-transport.js'></script>
-<script src='/jquery.fileupload.js'></script>
-<script src='/jquery.cloudinary.js'></script>
-<script src='/broadcaster.js'></script>
-
-<script src="/medium-editor.js"></script>
-<script src="/medium-editor-insert-plugin.js"></script>
-
-<script>
-  var post = {{post|json|safe}};
-  console.log(post);
-
-    $(function () {
-
-        if(post) {
-          $('select[name=category]').find('option[value=' + post.Category.id + ']').attr('selected', true);
-        }
-        $.cloudinary.config({{cloudinary.config()|json|safe}});
-
-        var editor = new MediumEditor('.editable', {
-            buttonLabels: 'fontawesome',
-            targetBlank: true,
-            imageDragging: false,
-            toolbar: {
-                buttons: [
-                'h2', 'h3', 'bold', 'italic', 'quote', 'anchor'
-              ]
-            }
-        });
-        //
-        // $('.publish-btn').click(function() {
-        //   if(!post) return alert('Necesitas escribir algo =)');
-        //
-        //   var url = '/blog/post/update';
-        //   var payload = {published:true}
-        //   payload.idPost = post.id;
-        //   $.post(url, payload).then(function (response) {
-        //     alert('publicado');
-        //   });
-        // });
-
-        $('.editable').mediumInsert({
-            editor: editor,
-            addons: {
-              embeds: false
-            }
-        });
-
-        var uploadingImage = false;
-
-        var $status = $('.status');
-
-        Broadcaster.addEventListener('imageProgressComplete', function () {
-            $status.text('Procesando imagenes....');
-            console.log('started');
-        });
-
-        Broadcaster.addEventListener('imageStarted', function () {
-            uploadingImage = true;
-            $status.text('Cargando imagenes....');
-            console.log('started');
-        });
-
-        Broadcaster.addEventListener('imageLoaded', function () {
-            uploadingImage = false;
-            triggerAutoSave(null, null);
-            $status.text('Imagenes cargadas');
-        });
-
-        var triggerAutoSave = function (event, editable) {
-            if (uploadingImage) return console.log('subiendo imagen');
-
-            var name = $('input[name=name]').val().trim();
-            if(name.length < 1) {
-              return alert('Agrega un titulo');
-            }
-
-            var category = $('select[name=category]').val().trim();
-            if(category.length < 1)  return alert('Agregar categoria');
-
-
-            var b = editor.serialize()['element-0']['value'];
-            var $editable = $(editable);
-
-            var payload = {
-              body: b,
-              name: name,
-              category: category,
-              description: $editable.find('p').text().substr(0, 300),
-              photo: $editable.find('img').attr('src')
-            };
-
-            $status.text('Guardando.....');
-            if (!post) {
-                var url = '/blog/post/create';
-                $.post(url, payload).then(function (response) {
-                    post = response.data.post;
-                    $status.text('✓ guardado');
-                });
-            } else {
-                var url = '/blog/post/update';
-                payload.idPost = post.id;
-                $.post(url, payload).then(function (response) {
-                    post = response.data.post;
-                    $status.text('✓ guardado');
-                });
-            }
-        };
-
-        var throttledAutoSave = MediumEditor.util.throttle(triggerAutoSave, 1000);
-        editor.subscribe('editableInput', throttledAutoSave);
-
-        window.onbeforeunload = function(evt) {
-          if(uploadingImage) {
-            var message = 'Aun no se han guardado tus cambios!';
-            if (typeof evt == 'undefined') {
-                evt = window.event;
-            }
-            if (evt) {
-                evt.returnValue = message;
-            }
-
-            return message;
-          }
-
-}
-    });
-</script>
-</body>
-</html> -->
-
-
-<!-- <button class="publish-btn">
-  publicar
-</button> -->
