--- a/app/views/blog/index.html
+++ b/app/views/blog/index.html
@@ -1,8 +1,12 @@
+{% set pageTitle = "Blog" %}
 {% extends '../partials/base.html' %}
 
 {% block elements %}
+
+{% if user %}
+  <a href="/creator">nuevo</a>
+{% endif %}
 <!--
-    <a href="/blog/creator">nuevo</a>
 
     <ul>
       {% for post in data.items %}
@@ -45,11 +49,13 @@
   <!-- ********************************************************************
     $ BLOG MAIN ARTICLE
   ********************************************************************* -->
+  {% if featureds[0] %}
   <div class="grid-container u-margin-top-20">
     <div class="grid-100">
+      <a href="/post/{{featureds[0].nameSlugify}}">
       <section class="slider">
         <div class="slider-items">
-          <div class="slider-item js-slide" style="background-image: url('{{featureds[0].photo|addFilter('w_1200,h_400,q_80,c_limit')}}')">
+          <div class="slider-item js-slide" style="background-image: url('{{featureds[0].photo|addFilter('w_1600,c_limit')}}')">
             <span class="slider-item-tag">{{featureds[0].Category.name}}</span>
             <div class="slider-item-inner">
               <p class="title">{{featureds[0].name}}</p>
@@ -66,41 +72,47 @@
           </div>
         </div>
       </section>
+    </a>
     </div>
   </div>
+  {% endif %}
 
 
   <div class="grid-container u-margin-top-10">
     <div class="grid-100 grid-parent">
       <div class="blog-articles-container">
         {% for i in [1,2] %}
+        {% if featureds[i] %}
         <div class="blog-article-container large">
-          <article class="blog-article">
-            <header class="header" style="background-image: url('{{featureds[i].photo|addFilter('w_600,h_400,q_80,c_limit')}}')">
-              <span class="tag">{{featureds[i].Category.name}}</span>
-              <div class="inner">
-                <p class="title">{{featureds[i].name}}</p>
-                <div class="stats u-margin-top-15">
-                  <p><i class="fa fa-heart"></i>&nbsp;&nbsp;{{featureds[i].likes}}</p>
-                  <p><i class="fa fa-comment"></i>&nbsp;&nbsp;{{featureds[i].reviews}}</p>
+          <a href="/post/{{featureds[i].nameSlugify}}">
+            <article class="blog-article">
+              <header class="header" style="background-image: url('{{featureds[i].photo|addFilter('w_600,h_400,q_80,c_limit')}}')">
+                <span class="tag">{{featureds[i].Category.name}}</span>
+                <div class="inner">
+                  <p class="title">{{featureds[i].name}}</p>
+                  <div class="stats u-margin-top-15">
+                    <p><i class="fa fa-heart"></i>&nbsp;&nbsp;{{featureds[i].likes}}</p>
+                    <p><i class="fa fa-comment"></i>&nbsp;&nbsp;{{featureds[i].reviews}}</p>
+                  </div>
                 </div>
-              </div>
-            </header>
-            <p class="content">{{featureds[i].description}}</p>
-            <footer class="footer">
-              <p class="date"><i class="bi_interface-clock"></i> {{featureds[i].createdAt|formatDate()}}</p>
-              <span class="author">
-                <p>Por&nbsp;&nbsp;</p>
-                <img src="{{featureds[i].User.photo}}">
-                <P>&nbsp;{% if featureds[i].User.typeName === 1 %}
-                  {{featureds[i].User.fullname}}
-                {% else %}
-                  {{featureds[i].User.pseudonimo}}
-                {% endif %}</P>
-              </span>
-            </footer>
-          </article>
+              </header>
+              <p class="content">{{featureds[i].description}}</p>
+              <footer class="footer">
+                <p class="date"><i class="bi_interface-clock"></i> {{featureds[i].createdAt|formatDate()}}</p>
+                <span class="author">
+                  <p>Por&nbsp;&nbsp;</p>
+                  <img src="{{featureds[i].User.photo}}">
+                  <P>&nbsp;{% if featureds[i].User.typeName === 1 %}
+                    {{featureds[i].User.fullname}}
+                  {% else %}
+                    {{featureds[i].User.pseudonimo}}
+                  {% endif %}</P>
+                </span>
+              </footer>
+            </article>
+          </a>
         </div>
+        {% endif %}
         {% endfor %}
       </div>
     </div>
