--- a/app/views/partials/base.html
+++ b/app/views/partials/base.html
@@ -4,7 +4,11 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
 
+	{% if pageTitle %}
+	<title>{{pageTitle}} | Arte Manifiesto</title>
+	{% else %}
 	<title>Arte Manifiesto</title>
+	{% endif %}
 
 	<link href='https://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700,700italic|Montserrat:400,700' rel='stylesheet' type='text/css'>
 
