--- a/app/views/partials/base.html
+++ b/app/views/partials/base.html
@@ -159,6 +159,7 @@
 	<script src='/jquery.iframe-transport.js'></script>
 	<script src='/jquery.fileupload.js'></script>
 	<script src='/jquery.cloudinary.js'></script>
+	<script src='/broadcaster.js'></script>
 
 	{% include 'elements/work.html' %}
 	{% include 'elements/user.html' %}
