--- a/app/views/partials/base.html
+++ b/app/views/partials/base.html
@@ -161,6 +161,11 @@
 	<script src='/jquery.cloudinary.js'></script>
 	<script src='/broadcaster.js'></script>
 
+	<script src="http://linkesch.com/medium-editor-insert-plugin/bower_components/handlebars/handlebars.runtime.min.js"></script>
+	<script src="//cdn.jsdelivr.net/medium-editor/latest/js/medium-editor.min.js"></script>
+	<script src="/medium-editor-insert-plugin.js"></script>
+
+
 	{% include 'elements/work.html' %}
 	{% include 'elements/user.html' %}
 	{% include 'elements/product.html' %}
