--- a/app/views/partials/elements/post.html
+++ b/app/views/partials/elements/post.html
@@ -1,6 +1,6 @@
 <script type="text/template" id="template-post">
     <div class="blog-article-container">
-      <a href="/post/<%=nameSlugify%>">
+      <a href="/blog/post/<%=nameSlugify%>">
       <article class="blog-article">
         <header class="header" style="background-image: url('<%= addFilter(photo, 'w_380,h_260,c_fill') %>')">
           <span class="tag"><%= Category.name %></span>
