--- a/app/views/partials/report.html
+++ b/app/views/partials/report.html
@@ -23,14 +23,14 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/users/page-1">Arte Manifiesto</a>
+          <a class="navbar-brand" href="/report/users/page-1">Arte Manifiesto</a>
         </div>
 
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="/general">General</a></li>
-            <li><a href="/users/page-1">Usuarios</a></li>
-            <li><a href="/works/page-1">Obras</a></li>
+            <li><a href="/report/general">General</a></li>
+            <li><a href="/report/users/page-1">Usuarios</a></li>
+            <li><a href="/report/works/page-1">Obras</a></li>
           </ul>
         </div>
       </div>
