--- a/app/views/blog/index.html
+++ b/app/views/blog/index.html
@@ -11,7 +11,7 @@
         <div class="logo">am <span>blog</span></div>
         <div class="menu">
           {% for category in categories %}
-            <a href="/category/{{category.nameSlugify}}" class="item">{{category.name}}</a>
+            <a href="/blog/category/{{category.nameSlugify}}" class="item">{{category.name}}</a>
           {% endfor %}
         </div>
         <div class="socials">
