add design to creator

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -4015,7 +4015,6 @@ white = #fff
 
 .blog-article
 	box-shadow 0 2px 4px 0 rgba(black, .5)
-	// border-radius 3px
 	overflow hidden
 	margin 10px
 	background white
@@ -4023,6 +4022,8 @@ white = #fff
 		display flex
 		position relative
 		min-height 220px
+		background-size: cover;
+		background-position: center center;
 		img
 			position absolute
 		.tag
@@ -4162,6 +4163,35 @@ white = #fff
 		margin auto
 		line-height 1.15
 
+	.input-title
+		font-family: 'Montserrat',sans-serif;
+		font-weight bold
+		font-size 52px
+		// padding-top 15px
+		padding-top 20px
+		color white
+		max-width 900px
+		margin auto
+		line-height 1.15
+		text-align center
+		background transparent
+		display block
+		// &::-webkit-input-placeholder {
+		// 	color: white;
+		// }
+		// &:-moz-placeholder {
+		// /* FF 4-18 */
+		// 	color: white;
+		// }
+		// &::-moz-placeholder {
+		// /* FF 19+ */
+		// 	color: white;
+		// }
+		// &:-ms-input-placeholder {
+		// /* IE 10+ */
+		// 	color: white;
+		// }
+
 	.tag
 		font-family: 'Montserrat',sans-serif;
 		font-weight bold
@@ -4170,6 +4200,29 @@ white = #fff
 		letter-spacing 1.5px
 		border-radius 4px
 		border solid 1px #ededed
+		padding 3px 6px
+
+	.select-tag
+		font-family: 'Montserrat',sans-serif;
+		font-weight bold
+		font-size 9px
+		color #fefefe
+		letter-spacing 1.5px
+		border-radius 4px
+		border solid 1px #ededed
+		padding 3px 6px
+		background transparent
+		text-align center
+
+	.select-tag-option
+		font-family: 'Montserrat',sans-serif;
+		font-weight bold
+		font-size 9px
+		// color #fefefe
+		color #333
+		letter-spacing 1.5px
+		border-radius 4px
+		// border solid 1px #ededed
 		padding 3px 6px
 
 	.info
@@ -4195,8 +4248,6 @@ white = #fff
 		border-radius 17px
 
 
-<<<<<<< HEAD
-=======
 .blog-single-socials
 	max-width 500px
 	margin 20px auto 40px auto
@@ -4366,8 +4417,6 @@ white = #fff
 		margin 30px 0
 		margin-left 40px
 
-
->>>>>>> blog
 
 /*------------------------------------*
 	$ LADING
@@ -4613,13 +4662,8 @@ white = #fff
 		align-items center
 		// justify-content space-between
 		justify-content space-around
-<<<<<<< HEAD
-		margin-top 40px
-		flex-wrap wrap
-=======
 		margin-top 20px
 		flex-wrap: wrap;
->>>>>>> blog
 		img
 			max-width 50%
 			margin-top 20px
@@ -4654,13 +4698,8 @@ white = #fff
 		color white
 		font-family: 'Montserrat',sans-serif;
 		font-size 14px
-<<<<<<< HEAD
-		width 400px
-		margin-right 20px
-=======
 		width 250px
 		// margin-right 20px
->>>>>>> blog
 	.button
 		font-family: 'Montserrat',sans-serif;
 		font-size 10px
@@ -4669,8 +4708,6 @@ white = #fff
 		padding 17px 50px
 		background #276cf2
 		border-radius 40px
-<<<<<<< HEAD
-=======
 		display inline-block
 		margin-top 20px
 
@@ -4683,7 +4720,7 @@ white = #fff
 	.lading-join
 		.input
 			margin-right 20px
->>>>>>> blog
+
 
 
 
