--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -4151,6 +4151,27 @@ white = #fff
 	background-position center center
 	display: flex;
 	align-items: center;
+	position relative
+	overflow hidden
+
+	.am-Profile-banner-img
+		position absolute
+		top 50%
+		transform translate(0, -50%)
+		z-index: -1;
+		width: 100%;
+
+	.edit-options
+		position absolute
+		bottom 20px
+		right 20px
+		color white
+		font-size 1.5rem
+		.prelaod
+			animation 1.5s load infinite
+		i
+			cursor pointer
+			margin-left 10px
 
 	.title
 		font-family: 'Montserrat',sans-serif;
@@ -4176,21 +4197,6 @@ white = #fff
 		text-align center
 		background transparent
 		display block
-		// &::-webkit-input-placeholder {
-		// 	color: white;
-		// }
-		// &:-moz-placeholder {
-		// /* FF 4-18 */
-		// 	color: white;
-		// }
-		// &::-moz-placeholder {
-		// /* FF 19+ */
-		// 	color: white;
-		// }
-		// &:-ms-input-placeholder {
-		// /* IE 10+ */
-		// 	color: white;
-		// }
 
 	.tag
 		font-family: 'Montserrat',sans-serif;
