--- a/app/views/blog/creator.html
+++ b/app/views/blog/creator.html
@@ -9,11 +9,28 @@
 
 {% block elements %}
 
-    <!-- <p>
-        estado : <span class="status">Inicio</span>
-    </p> -->
+  <div class="blog-single-cover">
 
-  <div class="blog-single-cover" style="background-image: url('{{ post.photo }}')">
+    <div class="uploader-cover">
+
+      <div class="edit-options">
+        <div class="image-uploader" style="position:relative;">
+          {{ cloudinary.uploader.image_upload_tag('cover', {callback: cloudinary_cors,return_delete_token: true, html: {
+          style: "width:50px;height:55px;top:-18px;", class:'editor-cover' } })}}
+        </div>
+        <i class="bi_tool-camera-b upload edit-icon"></i>
+        <i class="prelaod fa fa-spinner hide preload"></i>
+        <i class="bi_interface-box-tick hide save-icon"></i>
+        <i class="bi_interface-box-cross hide cancel-icon"></i>
+      </div>
+
+      <div class="profile-imgage">
+        <div class="preview">
+          <img class="am-Profile-banner-img" src="http://res.cloudinary.com/arte-manifiesto/image/upload/c_limit,w_1600/general/am-cover.jpg">
+        </div>
+      </div>
+    </div>
+
     <div class="grid-container" style="text-align: center;">
       <div class="grid-100">
 
@@ -39,20 +56,25 @@
   </div>
 
 
-    <div class="uploader-work">
+    <!-- <p>
+        estado : <span class="status">Inicio</span>
+    </p> -->
+
+
+    <!-- <div class="uploader-work">
       <div class="profile-imgage">
         <div class="preview">
         </div>
       </div>
       <div class="preload hide"><i class="fa fa-spinner"></i></div>
       <button class="button upload u-margin-top-30">BUSCAR ARCHIVO</button>
-    </div>
-    <div class="image-uploader" style="position:relative;">
+    </div> -->
+    <!-- <div class="image-uploader" style="position:relative;">
         {{ cloudinary.uploader.image_upload_tag('cover', {callback: cloudinary_cors, return_delete_token: true, html: {
         style: "width:230px;height:55px;top:-70px;left: 105px;", class:'editor-cover' } })}}
-    </div>
+    </div> -->
 
-</br>
+    <!-- </br> -->
 
     <!-- <select class="input select" name='category'>
       <option disabled selected>Selecciona una Categoria</option>
