--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -4147,6 +4147,7 @@ white = #fff
 *------------------------------------*/
 .blog-single-cover
 	height 300px
+	margin-bottom 20px
 	background-size cover
 	background-position center center
 	display: flex;
